# browser-use-camoufox

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: real_world_kit.py  update_browser_use_target.py
src/browser_use_camoufox/: __init__.py  cli.py  conformance.py  diagnostics.py  session.py
src/browser_use_camoufox/compat/: __init__.py  detector.py  latest_pypi.py  surface_inventory.py
tasks/: diary.md  plan.md  todo.md
tests/integration/: test_agent_basic_flow.py  test_agent_startup_navigation.py  test_basic_actions.py  test_dom_selector_reliability.py  test_interaction_events.py  test_mcp_compat.py  test_navigation_events.py  test_no_fake_cdp_boundaries.py  test_session_lifecycle.py  test_tool_action_parity.py  test_tools_no_cdp.py  test_unsupported_boundaries.py
tests/parity/: test_artifact_recording.py  test_browser_capabilities.py  test_chrome_camoufox_dom_parity.py  test_conformance_matrix.py  test_forms_dropdown_upload.py  test_iframe_dom.py  test_search_extract_screenshot.py  test_shadow_dom.py  test_stale_indexes.py
tests/unit/: test_ci_release_gate.py  test_compat_detector.py  test_diagnostics.py  test_latest_pypi_compatibility.py  test_release_docs.py  test_runtime_patch_activation.py  test_surface_inventory.py
